css file update, fix image display on safari

--- a/css/demographicsClassification.css
+++ b/css/demographicsClassification.css
@@ -1,6 +1,7 @@
-#sample-images img{
-    max-width: 100px;
-    margin: 1rem;
+#sample-images img {
+	max-width: 100px;
+	max-height: 100px;
+	margin: 1rem;
 }
 
 /* +------------------------+ */
